--- a/package.json
+++ b/package.json
@@ -25,12 +25,14 @@
     "lucide-react": "^0.474.0",
     "next": "15.1.6",
     "next-auth": "^5.0.0-beta.25",
+    "next-themes": "^0.4.6",
     "nodemailer": "^6.10.0",
     "react": "^19.0.0",
     "react-day-picker": "^9.7.0",
     "react-dom": "^19.0.0",
     "react-hook-form": "^7.54.2",
     "shadcn": "^2.3.0",
+    "sonner": "^2.0.5",
     "tailwind-merge": "^2.6.0",
     "tailwindcss-animate": "^1.0.7",
     "zod": "^3.24.1"
