--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@hookform/resolvers": "^3.10.0",
     "@prisma/client": "^6.3.0",
     "@radix-ui/react-alert-dialog": "^1.1.14",
+    "@radix-ui/react-avatar": "^1.1.10",
     "@radix-ui/react-dialog": "^1.1.5",
     "@radix-ui/react-dropdown-menu": "^2.1.5",
     "@radix-ui/react-label": "^2.1.1",
@@ -24,7 +25,7 @@
     "clsx": "^2.1.1",
     "date-fns": "^4.1.0",
     "jspdf": "^3.0.1",
-    "lucide-react": "^0.474.0",
+    "lucide-react": "^0.518.0",
     "next": "15.1.6",
     "next-auth": "^5.0.0-beta.25",
     "next-themes": "^0.4.6",
@@ -33,6 +34,7 @@
     "react-day-picker": "^9.7.0",
     "react-dom": "^19.0.0",
     "react-hook-form": "^7.54.2",
+    "recharts": "^2.15.3",
     "resend": "^4.6.0",
     "shadcn": "^2.3.0",
     "sonner": "^2.0.5",
@@ -52,5 +54,8 @@
     "prisma": "^6.3.0",
     "tailwindcss": "^3.4.1",
     "typescript": "^5"
+  },
+  "overrides": {
+    "react-is": "^19.0.0-rc-69d4b800-20241021"
   }
 }
