--- a/package.json
+++ b/package.json
@@ -6,12 +6,15 @@
     "dev": "next dev --turbopack",
     "build": "next build",
     "start": "next lint && next start",
-    "lint": "next lint"
+    "lint": "next lint",
+    "db:generate": "drizzle-kit generate",
+    "db:migrate": "drizzle-kit migrate",
+    "db:studio": "drizzle-kit studio"
   },
   "dependencies": {
-    "@auth/prisma-adapter": "^2.7.4",
+    "@auth/drizzle-adapter": "^1.10.0",
     "@hookform/resolvers": "^3.10.0",
-    "@prisma/client": "^6.3.0",
+    "@libsql/client": "^0.15.9",
     "@radix-ui/react-accordion": "^1.2.11",
     "@radix-ui/react-alert-dialog": "^1.1.14",
     "@radix-ui/react-avatar": "^1.1.10",
@@ -25,13 +28,14 @@
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "date-fns": "^4.1.0",
+    "dotenv": "^16.6.0",
+    "drizzle-orm": "^0.44.2",
     "framer-motion": "^12.19.1",
     "jspdf": "^3.0.1",
     "lucide-react": "^0.518.0",
     "next": "15.1.6",
     "next-auth": "^5.0.0-beta.25",
     "next-themes": "^0.4.6",
-    "nodemailer": "^6.10.0",
     "react": "^19.0.0",
     "react-day-picker": "^9.7.0",
     "react-dom": "^19.0.0",
@@ -50,10 +54,10 @@
     "@types/nodemailer": "^6.4.17",
     "@types/react": "^19",
     "@types/react-dom": "^19",
+    "drizzle-kit": "^0.31.3",
     "eslint": "^9",
     "eslint-config-next": "15.1.6",
     "postcss": "^8",
-    "prisma": "^6.3.0",
     "tailwindcss": "^3.4.1",
     "typescript": "^5"
   },
