Added react-emiail and used it as template for sending emails

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,3 +1,11 @@
 {
-  "cSpell.words": ["dirzzle", "turso"]
+  "cSpell.words": [
+    "dirzzle",
+    "jspdf",
+    "libsql",
+    "shadcn",
+    "sonner",
+    "turso",
+    "wasn"
+  ]
 }
